# magicka

./: .gitignore  README.md  pyproject.toml  rxconfig.py  setup.ps1
app/: exceptions.py
app/back/data/: BaseSheetController.py
app/back/data/SqlData/: BaseCrud.py
app/back/data/SqlData/Tables/: Books.py  BorrowedBooks.py  Users.py
app/back/model/: DbModels.py  GeneralМodels.py
app/back/service/: library.py  parser.py
app/front/components/: components.py  sidebar.py
app/front/pages/: backups.py  books.py  borrowed_books.py  index.py  logs.py  settings.py  sync.py  sync_backups.py  users.py
app/middle/: BooksStates.py  BorrowedBooksStates.py  GeneralComponents.py  IndexStates.py  LogsStates.py  MiscStates.py  SettingsStates.py  SyncStates.py  UserStates.py
app/utils/: backupper.py  config.py  logs.py  utils.py
app/utils/config/: baseconfig.ini  config.ini
files/SheetFiles/: library.xlsx
files/SheetFiles/csv/: books.csv  borrowed_books.csv  users.csv
main/: main.py
