[tool.poetry]
name = "library"
version = "0.1.0"
description = "l1br@ry"
authors = ["0wo0w <you@example.com>"]
readme = "README.md"

[tool.ruff]
line-length = 100               # Максимальная длина строки
target-version = "py310"       # Целевая версия Python
fix = true                     # Разрешить автоматические исправления

# Выбираем правила из flake8, isort, mccabe, pyupgrade, black
select = [
  "E",    # pycodestyle (часть flake8)
  "F",    # pyflakes (часть flake8)
  "I",    # isort
  "C90",  # mccabe
  "UP",   # pyupgrade
  "B",    # flake8-bugbear (доп. анализ кода)
  "SIM",  # flake8-simplify (упрощения)
  "PYI",  # проверки типов .pyi
  "TID",  # tidy imports
  "PL",   # pylint совместимые проверки
  "RUF",  # собственные правила Ruff
]

# Упорядочивание импортов (аналог isort)
[tool.ruff.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["library"]  # Название твоего проекта (замени при необходимости)
lines-between-types = 1

# mccabe
[tool.ruff.mccabe]
max-complexity = 10

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
asyncpg = "0.30.0"
build = "1.2.2.post1"
cachecontrol = "0.14.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
pexpect = "4.9.0"
pkginfo = "1.11.2"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
urllib3 = "2.2.3"
virtualenv = "20.27.1"
aiosqlite = "^0.20.0"
openpyxl = "3.0.10"
python-multipart = "^0.0.20"
selenium = "^4.28.1"
sqlalchemy-utils = "^0.41.2"
loguru = "^0.7.3"
ruff = "^0.11.11"
reflex = "0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
